- Flag `Update-ADTEnvironmentPsProvider` as deprecated as of 4.1.0.
This function has been broken since the 4.0.0 release and no one's noticed. It's not a great function by any stretch so it's preferable to just drop it moving forward.

--- a/docs/Update-ADTEnvironmentPsProvider.mdx
+++ b/docs/Update-ADTEnvironmentPsProvider.mdx
@@ -8,6 +8,7 @@ hide_table_of_contents: false
 ## SYNOPSIS
 
 Updates the environment variables for the current PowerShell session with any environment variable changes that may have occurred during script execution.
+This function has been deprecated and will be removed from PSAppDeployToolkit 4.2.0.
 
 ## SYNTAX
 
