- Update markdown help exports for other deprecated functions.

--- a/docs/Get-ADTUniversalDate.mdx
+++ b/docs/Get-ADTUniversalDate.mdx
@@ -8,6 +8,7 @@ hide_table_of_contents: false
 ## SYNOPSIS
 
 Returns the date/time for the local culture in a universal sortable date time pattern.
+This function has been deprecated and will be removed from PSAppDeployToolkit 4.2.0.
 
 ## SYNTAX
 
