--- a/docs/Install-ADTMSUpdates.mdx
+++ b/docs/Install-ADTMSUpdates.mdx
@@ -8,6 +8,7 @@ hide_table_of_contents: false
 ## SYNOPSIS
 
 Install all Microsoft Updates in a given directory.
+This function has been deprecated and will be removed from PSAppDeployToolkit 4.2.0.
 
 ## SYNTAX
 
