--- a/docs/Resolve-ADTErrorRecord.mdx
+++ b/docs/Resolve-ADTErrorRecord.mdx
@@ -13,7 +13,7 @@ Enumerates ErrorRecord details.
 
 ```powershell
 Resolve-ADTErrorRecord [-ErrorRecord] <ErrorRecord> [[-Property] <String[]>] [-ExcludeErrorRecord]
- [-ExcludeErrorInvocation] [-ExcludeErrorException] [-ExcludeErrorInnerException] [<CommonParameters>]
+ [-ExcludeErrorInvocation] [-ExcludeErrorException] [-IncludeErrorInnerException] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -142,9 +142,9 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -ExcludeErrorInnerException
+### -IncludeErrorInnerException
 
-Exclude ErrorRecord inner exception details as represented by $ErrorRecord.Exception.InnerException.
+Includes further ErrorRecord inner exception details as represented by $ErrorRecord.Exception.InnerException.
 Will retrieve all inner exceptions if there is more than one.
 
 ```yaml
